fix: hide file label in collapsed detail panel

--- a/media/css/details.css
+++ b/media/css/details.css
@@ -114,6 +114,10 @@
   display: none;
 }
 
+.details--collapsed .read-preview__path {
+  display: none;
+}
+
 .details__actions .btn {
   min-height: 34px;
 }
